--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -30,7 +30,7 @@ With the recommended matcher, all routes are protected by Clerk's authentication
 
 ### Default behaviour
 
-If there is no `afterAuth` present in the middleware, then `authMiddleware` will fall back to its default behavior. The default behavior is:
+If there is no `afterAuth` present in the middleware, then `authMiddleware` will fall back to its default behavior:
 
 - If the [`.env` based settings](/docs/references/nextjs/custom-signup-signin-pages#update-your-environment-variables) for the sign-in and sign-up routes are present, add the sign-in and sign-up routes to any routes listed in `publicRoutes`.
 - If the `.env` based settings are not present, add `/sign-in` and `/sign-up` to any routes listed in `publicRoutes`.
