--- a/docs/errors/cookie.mdx
+++ b/docs/errors/cookie.mdx
@@ -12,7 +12,7 @@ Signifies an error when token is missing claim.
 
 ```json
 {
-    "shortMessage": invalidCookieMessage,
+    "shortMessage": "<invalidCookieMessage>",
     "longMessage":  "The token is missing the following claims: <claims>",
     "code":         "cookie_invalid_code"
 }
@@ -34,7 +34,7 @@ Signifies an error when rotating token does not match the client's rotating toke
 
 ```json
 {
-    "shortMessage": invalidCookieMessage,
+    "shortMessage": "<invalidCookieMessage>",
     "longMessage":  "The client's rotating key does not match the given one <token>",
     "code":         "cookie_invalid_code"
 }
