--- a/docs/guides/image-optimization/imageurl-image-optimization.mdx
+++ b/docs/guides/image-optimization/imageurl-image-optimization.mdx
@@ -1,11 +1,15 @@
 ---
-title: Use Image Optimization with imageUrl
-description: Learn how to migrate an application using Auth.js to use Clerk for authentication.
+title: Use image optimization to improve app performance
+description: Learn how to use image optimization when fetching user images from Clerk.
 ---
 
-# Use Image Optimization with `imageUrl`
+# Use image optimization to improve app performance
 
-Some types in Clerk's JavaScript SDK, such as [`User`](/docs/references/javascript/user/user), [`PublicUserData`](/docs/references/javascript/types/public-user-data#properties), and [`Organization`](/docs/references/javascript/organization/organization#properties), have an `imageUrl`. The URL returned from this property can be scaled down with the following Image Optimization options:
+When displaying your users' profile images, you should use query parameters to specify a maximum size and minimum quality. Doing so can allow you to improve your app's overall page load times by reducing the file sizes of the images you're fetching.
+
+## Add query parameters to `imageUrl`
+
+Some types in Clerk's JavaScript SDK, such as [`User`](/docs/references/javascript/user/user), [`PublicUserData`](/docs/references/javascript/types/public-user-data#properties), and [`Organization`](/docs/references/javascript/organization/organization#properties), have an `imageUrl`. The URL returned from this property can be scaled down with the following image optimization options:
 
 - `"width"`: Sets the max width of the image in pixels.
 - `"height"`: Sets the max height of the image in pixels.
@@ -16,9 +20,9 @@ Some types in Clerk's JavaScript SDK, such as [`User`](/docs/references/javascri
 
 ## Example
 
-The following example demonstrates how you can get the `imageUrl` from currently active user in a session, and display their profile picture using Clerk's image optimization options:
+The following example demonstrates how you can get the `imageUrl` from the currently active user in a session, and display their profile picture using Clerk's image optimization options:
 
-<CodeBlockTabs type="framework" options={["Next.js App", "Next.js Pages", "React"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 
 ```tsx filename="app/image-optimization/page.tsx"
 import { currentUser } from "@clerk/nextjs";
@@ -47,36 +51,10 @@ export default async function ImageOptimization() {
   );
 }
 ```
-```tsx filename="pages/image-optimization/index.tsx"
-import { currentUser } from "@clerk/nextjs";
-
-export default async function ImageOptimization() {
-  const user = await currentUser();
-  if (!user) return <p>No Image URL found</p>;
-
-  const { imageUrl } = user;
-  const params = new URLSearchParams();
-
-  params.set("height", "200");
-  params.set("width", "200");
-  params.set("quality", "100");
-  params.set("fit", "crop");
-
-  const imageSrc = `${imageUrl}?${params.toString()}`;
-
-  return (
-    <div>
-      <h1>Image source:</h1>
-      <p>{imageSrc}</p>
-      <h2>Image:</h2>
-      <img src={imageSrc} alt="User image" />
-    </div>
-  );
-}
-```
 ```tsx filename="components/image-optimization.tsx"
 import { useClerk } from "@clerk/clerk-react";
- 
+import React from "react";
+
 export default function ImageOptimization() {
   const clerk = useClerk();
   const { user } = clerk;
